<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:weightSum="3"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintTop_toBottomOf="@+id/about_text">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/ic_contact_mail_dark"
            android:padding="4dp"
            android:text="@string/send_mail_button"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="sendMail"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/ic_share_dark"
            android:padding="4dp"
            android:text="@string/share_app_button"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="shareApp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:drawableStart="@drawable/icon_favourite_red"
            android:padding="4dp"
            android:text="@string/rate_app_button"
            style="?android:attr/buttonBarButtonStyle"

            android:textColor="@color/colorPrimaryDark"
            android:onClick="rateApp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_blue_light"
        android:onClick="goToPrivacyPolicy"
        android:text="Privacy Policy"/>
</LinearLayout>