<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/rss_news_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:minHeight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_video" />

    <ImageView
        android:id="@+id/fav_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_blank"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/rss_news_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_demo_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:maxLines="4"
        android:ellipsize="end"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/rss_news_thumbnail" />

    <TextView
        android:id="@+id/rss_news_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_demo_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="10"
        android:ellipsize="end"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/rss_news_title" />

    <TextView
        android:id="@+id/rss_news_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:background="@drawable/text_background"
        app:layout_constraintBottom_toBottomOf="@+id/rss_news_thumbnail"
        android:padding="8dp"
        android:alpha="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rss_news_publish_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_date_demo_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/rss_news_thumbnail"
        android:padding="8dp"
        android:alpha="0.6"
        android:background="@drawable/text_background"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>