<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/video_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/placeholder_video" />
    <ImageView
        android:id="@+id/fav_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/star_blank"
        android:alpha="0.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/video_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:ellipsize="end"
        android:padding="4dp"
        android:maxLines="4"
        android:text="@string/video_title_demo_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video_thumbnail" />

    <TextView
        android:id="@+id/channel_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:background="@drawable/text_background"
        android:padding="8dp"
        android:text="@string/channel_name_demo_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/video_thumbnail"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/publish_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish_date_demo_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/video_thumbnail"
        android:padding="8dp"
        android:alpha="0.6"
        android:background="@drawable/text_background"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>